--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,33 @@
-/* You can add global styles to this file, and also import other style files */
+/* You can add global styles to this file, and also import other style */
+*{
+    margin: 0px;
+    padding: 0px;
+}
+html {
+    width: 100%;
+    height: 100%;
+ }
+
+@font-face {
+    font-family: scott-room;
+    src: url("assets/fonts/BlackGladiator.ttf");
+}
+
+body{
+    position : absolute;
+	width : 105%;
+	height : 100%;
+    overflow-x: hidden;
+}
+
+.container-main{
+    background-image: url('assets/images/back-1300x866.jpg');
+    background-size: 100% 100%;
+
+    align-items: center;
+     justify-content: center;
+     position : absolute;
+	width : 100%;
+	height : 100%;
+}
+
